--- a/views/map.pug
+++ b/views/map.pug
@@ -8,7 +8,8 @@ block content
       if (navigator.geolocation) {
       navigator.geolocation.getCurrentPosition(function(data){
       if (data.coords) {
-      window.location = 'https://maps.google.fr/maps?saddr=' + data.coords.latitude + ',' + data.coords.longitude + '&daddr=' + daddr;
+      url = 'https://maps.google.fr/maps?saddr=' + data.coords.latitude + ',' + data.coords.longitude + '&daddr=' + daddr;
+      window.open(url, '_blank');
       }
       });
       }
