--- a/views/mixins/_storeCard.pug
+++ b/views/mixins/_storeCard.pug
@@ -23,3 +23,5 @@ mixin storeCard(store = {})
         a(href=`/store/${store.slug}`) #{store.name}
     .store__details
       p= store.description.split(' ').slice(0, 25).join(' ')
+      div
+        p(style="font-family: 'Comic Sans MS', cursive, sans-serif; ") /5
