--- a/views/stores.pug
+++ b/views/stores.pug
@@ -1,12 +1,17 @@
 extends layout
 
-include mixins/_storeCard
+
 include mixins/_pagination
+include mixins/_storeCard
 
 block content
   .inner
     h2= title
+   
     .stores
-      each store in stores
-        +storeCard(store)
+      each store, index in stores 
+         +storeCard(store, index)
+         
+         
+  
     +pagination(page, pages, count)
