--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -22,12 +22,12 @@ mixin storeForm(store = {})
     input(type="text" id="price" name="price" value=(store.price) required)
     label(for="cusine") Cusine
     input(type="text" id="cusine" name="cusine" value=(store.cusine) required)
-    label(for="meals") Meals
-    input(type="text" id="meals" name="meals" value=(store.meal) required)
-    label(for="feat") Resturant features
-    input(type="text" id="feat" name="feat" value=(store.features) required)
-    label(for="goodfor") Good For
-    input(type="text" id="goodfor" name="goodfor" value=(store.goodFor) required)
+    label(for="meal") Meals
+    input(type="text" id="meal" name="meal" value=(store.meal) required)
+    label(for="features") Resturant features
+    input(type="text" id="features" name="features" value=(store.features) required)
+    label(for="goodFor") Good For
+    input(type="text" id="goodFor" name="goodFor" value=(store.goodFor) required)
     label(for="open") Description
     textarea(name="open")= store.description
     - const choices = ['Wifi', 'Open Late', 'Family Friendly', 'Vegatarian', 'Licensed']
